fix: fix swagger routes
