# handlers/category_handler/deleteCategory.go
@@ -5,8 +5,6 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/isaiaspereira307/gopvp/internal/db"
-
 	"github.com/gin-gonic/gin"
 )
 
@@ -16,12 +14,12 @@ import (
 // @Tags category
 // @Accept json
 // @Produce json
-// @Param id query string true "Delete Category Param"
+// @Param id path string true "Delete Category Param"
 // @Success 200 {object} DeleteCategoryResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /category [delete]
-func DeleteCategory(ctx *gin.Context, queries *db.Queries) {
+// @Router /category/{id} [delete]
+func DeleteCategory(ctx *gin.Context) {
 	id := ctx.Param("id")
 	idInt64, err := strconv.ParseInt(id, 10, 64)
 	if err != nil || idInt64 > math.MaxInt32 || idInt64 < math.MinInt32 {
