# handlers/objectives_handler/getObjective.go
@@ -5,8 +5,6 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/isaiaspereira307/gopvp/internal/db"
-
 	"github.com/gin-gonic/gin"
 )
 
@@ -16,12 +14,12 @@ import (
 // @Tags objective
 // @Accept json
 // @Produce json
-// @Param id query string true "Show Objective Request"
+// @Param id path string true "Show Objective Request"
 // @Success 200 {object} ShowObjectiveResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /objective [get]
-func GetObjective(ctx *gin.Context, queries *db.Queries) {
+// @Router /objective/{id} [get]
+func GetObjective(ctx *gin.Context) {
 	id := ctx.Param("id")
 	idInt64, err := strconv.ParseInt(id, 10, 64)
 	if err != nil || idInt64 > math.MaxInt32 || idInt64 < math.MinInt32 {
