# handlers/subcategory_handler/getSubcategory.go
@@ -5,8 +5,6 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/isaiaspereira307/gopvp/internal/db"
-
 	"github.com/gin-gonic/gin"
 )
 
@@ -16,12 +14,12 @@ import (
 // @Tags subcategory
 // @Accept json
 // @Produce json
-// @Param id query string true "Show Subcategory Request"
+// @Param id path string true "Show Subcategory Request"
 // @Success 200 {object} ShowSubcategoryResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /subcategory [get]
-func GetSubcategory(ctx *gin.Context, queries *db.Queries) {
+// @Router /subcategory/{id} [get]
+func GetSubcategory(ctx *gin.Context) {
 	id := ctx.Param("id")
 	idInt64, err := strconv.ParseInt(id, 10, 64)
 	if err != nil || idInt64 > math.MaxInt32 || idInt64 < math.MinInt32 {
