# handlers/users_handler/getUser.go
@@ -1,11 +1,8 @@
 package handlers
 
 import (
-	"math"
 	"net/http"
 	"strconv"
-
-	"github.com/isaiaspereira307/gopvp/internal/db"
 
 	"github.com/gin-gonic/gin"
 )
@@ -16,15 +13,15 @@ import (
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param id query string true "Show User Request"
+// @Param id path string true "Show User Request"
 // @Success 200 {object} ShowUserResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
-// @Router /user [get]
-func GetUser(ctx *gin.Context, queries *db.Queries) {
+// @Router /users/{id} [get]
+func GetUser(ctx *gin.Context) {
 	id := ctx.Param("id")
-	idInt64, err := strconv.ParseInt(id, 10, 64)
-	if err != nil || idInt64 > math.MaxInt32 || idInt64 < math.MinInt32 {
+	idInt64, err := strconv.ParseInt(id, 10, 32)
+	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid id"})
 		return
 	}
@@ -35,5 +32,5 @@ func GetUser(ctx *gin.Context, queries *db.Queries) {
 		return
 	}
 
-	ctx.JSON(http.StatusOK, user)
+	sendSuccess(ctx, "getUser", user)
 }
